# picosim

./: .gitignore  DEPENDENCIES.md  README.md  installation.md  pyproject.toml  setup.py
picosim/: CMakeLists.txt  cpu.py  gpio.py  link.ld  memory.py  os.ld  os.s  peripherals.s  picosim_core.cpp  sim.py  uf2.py  wrapper_main.c
test_asm_files/: bench.s  echo_test.s  gpio_test.s  insn_coverage_test.s  pc_offset_test.s  test_main.s  uint16_loop_test.s  uint8_t_test.s
